src/tests/testfiles/function-declarations/7.txt
testfiles/function-declarations/7.c:4:5: error: function: undefined reference to 'sum'
sum(1, 2);
^
